Fix #1 shadows on firefox mobile
WHY does firefox use a background-image for its form elements?????????????????
http://stackoverflow.com/questions/16751153/styling-input-type-text-on-mobile-firefox

--- a/views/main.scss
+++ b/views/main.scss
@@ -1190,6 +1190,9 @@ $timeline_collapse_width: 46em;
             margin-bottom: .8em;
             input, textarea {
               -webkit-appearance: none;
+              -moz-appearance: none;
+              appearance: none;
+              background-image: none;
               font-family: "Open Sans";
               font-weight: 400;
               width: 100%;
@@ -1206,6 +1209,7 @@ $timeline_collapse_width: 46em;
             }
             button.submit {
               font-family: "Open Sans";
+              background-image: none;
               font-weight: 300;
               border: none;
               outline: none;
